# backend

./: Cargo.toml  example.json  postgres.sh  settings.json
src/: config.rs  database.rs  jwt.rs  main.rs
src/endpoints/: _auth.rs  admin.rs  carbon.rs  components.rs  crud.rs  images.rs  login.rs  mod.rs  navigation.rs  ronly.rs
src/utils/: build_tree.rs  mod.rs
