[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
sqlx-macros = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
time = { version = "0.3", features = ["macros", "serde"] }
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
jsonwebtoken = "9.3.1"
actix-cors = "0.7.1"
