[package]
name = "vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
sqlx-macros = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = "0.7"
time = { version = "0.3.41", features = ["macros", "serde"] }
argon2 = "0.5"
rand = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1.0"
jsonwebtoken = "9.3.1"
actix-cors = "0.7.1"
walkdir = "2"
actix-multipart = "0.7.2"
futures-util = "0.3"
